--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme2"
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity android:name="my_manage.MainActivity">
@@ -23,13 +23,14 @@
             </intent-filter>
         </activity>
         <activity android:name="my_manage.password_box.page.PasswordManageActivity" />
-        <activity android:name="my_manage.password_box.page.PasswordManageItemDetailsFragment" />
+        <activity android:name="my_manage.password_box.fragment.PasswordManageItemDetailsFragment" />
         <activity android:name="my_manage.password_box.page.dialog.changePasswordDialog" />
         <activity android:name="my_manage.password_box.page.dialog.Login_Activity" />
         <activity android:name="my_manage.password_box.page.PasswordManageViewPagerHome" />
         <activity android:name="my_manage.rent_manage.RentalMainActivity" />
-        <activity android:name="my_manage.rent_manage.page.RentalForHouse"/>
-        <activity android:name="my_manage.rent_manage.page.NewRoom"/>
+        <activity android:name="my_manage.rent_manage.page.RentalForHouseActivity"/>
+        <activity android:name="my_manage.rent_manage.page.RoomDetailsActivity"/>
+        <activity android:name="my_manage.rent_manage.page.RoomHistoryActivity"/>
         <!--        <receiver-->
         <!--            android:name=".receiver.PwdDBChangeReceiver"-->
         <!--            android:enabled="true"-->
