--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="my_manage.password_box">
-
-    <!--    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />-->
+    <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> -->
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
@@ -15,30 +14,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme2"
         tools:ignore="GoogleAppIndexingWarning">
-
         <activity android:name="my_manage.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="my_manage.password_box.page.PasswordManageActivity" />
-        <activity android:name="my_manage.password_box.fragment.PasswordManageItemDetailsFragment" />
-        <activity android:name="my_manage.password_box.page.dialog.changePasswordDialog" />
-        <activity android:name="my_manage.password_box.page.dialog.Login_Activity" />
-        <activity android:name="my_manage.password_box.page.PasswordManageViewPagerHome" />
+        <activity android:name="my_manage.rent_manage.page.ShowPersonExpandActivity"/>
+        <activity android:name=".page.PasswordManageActivity" />
+        <activity android:name=".fragment.PasswordManageItemDetailsFragment" />
+        <activity android:name=".page.dialog.changePasswordDialog" />
+        <activity android:name=".page.dialog.Login_Activity" />
+        <activity android:name=".page.PasswordManageViewPagerHome" />
         <activity android:name="my_manage.rent_manage.RentalMainActivity" />
-        <activity android:name="my_manage.rent_manage.page.RentalForHouseActivity"/>
-        <activity android:name="my_manage.rent_manage.page.RoomDetailsActivity"/>
-        <activity android:name="my_manage.rent_manage.page.RoomHistoryActivity"/>
-        <!--        <receiver-->
-        <!--            android:name=".receiver.PwdDBChangeReceiver"-->
-        <!--            android:enabled="true"-->
-        <!--            android:exported="true">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name=".receiver.PwdDBChangeReceiver" />-->
-        <!--            </intent-filter>-->
-        <!--        </receiver>-->
+        <activity android:name="my_manage.rent_manage.page.RentalForHouseActivity" />
+        <activity android:name="my_manage.rent_manage.page.RoomDetailsActivity" />
+        <activity android:name="my_manage.rent_manage.page.RoomHistoryActivity" />
     </application>
 
 </manifest>
