--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="my_manage.password_box">
+
     <!-- <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> -->
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
@@ -12,16 +13,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme2"
+        android:theme="@style/AppMyTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="my_manage.MainActivity">
+        <receiver
+            android:name="my_manage.receiver.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service
+            android:name="my_manage.rent_manage.MyService"
+            android:exported="false" />
+
+        <activity android:name="my_manage.rent_manage.page.ContinueContractActivity" />
+        <activity android:name="my_manage.rent_manage.page.ContinuePropertyActivity" />
+        <activity android:name="my_manage.rent_manage.page.ContinueRentActivity" />
+        <activity
+            android:name="my_manage.MainActivity"
+            android:theme="@style/AppMyTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="my_manage.rent_manage.page.ShowPersonExpandActivity"/>
+        <activity android:name="my_manage.rent_manage.page.ShowPersonExpandActivity" />
         <activity android:name=".page.PasswordManageActivity" />
         <activity android:name=".fragment.PasswordManageItemDetailsFragment" />
         <activity android:name=".page.dialog.changePasswordDialog" />
@@ -29,8 +43,8 @@
         <activity android:name=".page.PasswordManageViewPagerHome" />
         <activity android:name="my_manage.rent_manage.RentalMainActivity" />
         <activity android:name="my_manage.rent_manage.page.RentalForHouseActivity" />
-        <activity android:name="my_manage.rent_manage.page.RoomDetailsActivity" />
         <activity android:name="my_manage.rent_manage.page.RoomHistoryActivity" />
+        <activity android:name="my_manage.rent_manage.page.RoomDetailsByToolbarActivity" />
     </application>
 
 </manifest>
