--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "my_manage.password_box"
         minSdkVersion 28
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 4
+        versionName '1.0.3'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //添加如下配置 开启annotation processor
@@ -54,6 +54,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -65,8 +66,6 @@ dependencies {
     implementation 'org.jasypt:jasypt:1.9.3'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.alibaba:fastjson:1.1.55.android'
-    //本地消息
-    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 
     // https://mvnrepository.com/artifact/com.githang/android-lite-orm数据库操作
     implementation group: 'com.githang', name: 'android-lite-orm', version: '1.10.0-beta'
@@ -97,5 +96,9 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.baoyz.swipemenulistview/library 第三方listView，侧滑删除
     implementation group: 'com.baoyz.swipemenulistview', name: 'library', version: '1.3.0'
+
+    // https://mvnrepository.com/artifact/com.classic.adapter/commonadapter
+    implementation group: 'com.classic.adapter', name: 'commonadapter', version: '2.0'
+
 
 }
