--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "my_manage.password_box"
         minSdkVersion 28
         targetSdkVersion 29
-        versionCode 5
-        versionName '1.0.4'
+        versionCode 6
+        versionName '1.0.5'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //添加如下配置 开启annotation processor
@@ -70,10 +70,6 @@ dependencies {
     // https://mvnrepository.com/artifact/com.githang/android-lite-orm数据库操作
     implementation group: 'com.githang', name: 'android-lite-orm', version: '1.10.0-beta'
 
-//    implementation 'com.android.support:multidex:1.0.3'
-    implementation files('poi-3.12-android-a.jar')
-    implementation files('poi-ooxml-schemas-3.12-20150511-a.jar')
-
     //第三方对话框
     implementation 'com.orhanobut:dialogplus:1.11@aar'
 
@@ -100,5 +96,7 @@ dependencies {
     // https://mvnrepository.com/artifact/com.classic.adapter/commonadapter
     implementation group: 'com.classic.adapter', name: 'commonadapter', version: '2.0'
 
+// https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl excel文件
+    implementation group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
 
 }
