--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         <activity android:name="my_manage.rent_manage.page.RentalForHouseActivity" />
         <activity android:name="my_manage.rent_manage.page.RoomHistoryActivity" />
         <activity android:name="my_manage.rent_manage.page.RoomDetailsByToolbarActivity" />
+        <activity android:name=".page.PasswordManageTotalActivity"/>
     </application>
 
 </manifest>
