--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "my_manage.password_box"
         minSdkVersion 28
         targetSdkVersion 29
-        versionCode 7
-        versionName '1.0.6'
+        versionCode 8
+        versionName '1.0.7'
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         //添加如下配置 开启annotation processor
@@ -113,5 +113,8 @@ dependencies {
 
 // https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl excel文件
     implementation group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
+
+    // https://mvnrepository.com/artifact/com.adityak/browsemyfiles 第三方文件选择器
+    implementation group: 'com.adityak', name: 'browsemyfiles', version: '1.7'
 
 }
